feat(app): add working recording feature

--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
     </section>
     <footer class="footer">
         <div class="footer__wrapper">
+            <div id="rec">record</div>
+            <div id="play">play</div>
             <div class="footer__column">Done by Mateusz Tomczyk</div>
             <div class="footer__column"></div>
         </div>
     </footer>
+    <audio src="" id="audioDOMe"></audio>
     <script src="libs/particles.js"></script>
     <script src="scripts/index.js"></script>
 </body>
