fix(app): fix files

--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
 <body>
     <section class="soundkit-wrapper">
         <div class="soundboard">
-
         </div>
     </section>
     <footer class="footer">
         <div class="footer__wrapper">
-            <div id="rec">record</div>
-            <div id="play">play</div>
+            <div id="recOne" class="record-button">Record Channel 1</div>
+            <div id="recTwo" class="record-button">Record Channel 2</div>
+            <div id="recThree" class="record-button">Record Channel 3</div>
+            <div id="recFour" class="record-button">Record Channel 4</div>
+            <div id="play">Play</div>
             <div class="footer__column">Done by Mateusz Tomczyk</div>
             <div class="footer__column"></div>
         </div>
     </footer>
     <audio src="" id="audioDOMe"></audio>
-    <script src="libs/particles.js"></script>
     <script src="scripts/index.js"></script>
 </body>
 </html>
