feat(app): finish alpha version

--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
     </section>
     <footer class="footer">
         <div class="footer__wrapper">
-            <div id="channel1" class="record-button" onclick="recordChannelOne()">Record Channel 1</div>
-            <div id="channel2" class="record-button" onclick="recordChannelTwo()">Record Channel 2</div>
-            <div id="channel3" class="record-button" onclick="recordChannelThree()">Record Channel 3</div>
-            <div id="channel4" class="record-button" onclick="recordChannelFour()">Record Channel 4</div>
-            <div id="play1" class="play-button" onclick="playChannelOne()">Play channel 1</div>
-            <div id="play2" class="play-button" onclick="playChannelTwo()">Play channel 2</div>
-            <div id="play3" class="play-button" onclick="playChannelThree()">Play channel 3</div>
-            <div id="play4" class="play-button" onclick="playChannelFour()">Play channel 4</div>
+            <div class="footer__buttons-container">
+                <div id="channel1" class="record-button" onclick="recordChannelOne()">Record Channel 1</div>
+                <div id="channel2" class="record-button" onclick="recordChannelTwo()">Record Channel 2</div>
+                <div id="channel3" class="record-button" onclick="recordChannelThree()">Record Channel 3</div>
+                <div id="channel4" class="record-button" onclick="recordChannelFour()">Record Channel 4</div>
+            </div>
+            <div class="footer__buttons-container">
+                <div id="play1" class="play-button" onclick="playChannelOne()">Play channel 1</div>
+                <div id="play2" class="play-button" onclick="playChannelTwo()">Play channel 2</div>
+                <div id="play3" class="play-button" onclick="playChannelThree()">Play channel 3</div>
+                <div id="play4" class="play-button" onclick="playChannelFour()">Play channel 4</div>
+            </div>
             <div class="footer__column">Done by Mateusz Tomczyk</div>
             <div class="footer__column"></div>
         </div>
